--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-transformers
-scikit-learn
-matplotlib
-torchvision
-PIL
-scipy
-torch
+transformers==4.32.1 
+scikit-learn==1.3.2
+matplotlib==3.8.0 
+torchvision==0.18.0.dev20240101+cu121
+pillow==10.0.1 
+scipy==1.11.4
+torch==2.3.0.dev20240101+cu121
