--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 transformers==4.18.0
 scikit-learn==1.3.2
 matplotlib==3.8.0 
-torchvision==0.18.0.dev20240101+cu121
+torchvision==0.16.2
 pillow==10.0.1 
 scipy==1.11.4
-torch==2.3.0.dev20240101+cu121
+torch==2.1.2
