--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 transformers==4.32.1
 scikit-learn==1.3.2
 matplotlib==3.8.0 
-torchvision==0.16.2
 pillow==10.0.1 
 scipy==1.11.4
-torch==2.1.2
 opencv-python==4.9.0.80 
+
+torchvision==0.18.0.dev20240101+cu121 --pre
+torch==2.3.0.dev20240101+cu121 --pre
+-f https://download.pytorch.org/whl/nightly/cu121/torch_nightly.html
