--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   my_container:
     image: my_image
+    runtime: nvidia
     volumes:
       - /home/alonkay/Thesis/sequences:/home/alonkay/app/sequences
     deploy:
