--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: my_image
     volumes:
       - /home/alonkay/Thesis/sequences:/home/alonkay/app/sequences
-    runtime: nvidia
+    # runtime: nvidia
     deploy:
       resources:
         reservations:
