trying to fix memory issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 __pycache__
 poses/
 sequences/
@@ -6,3 +7,5 @@ epipole_lines/
 epipole_lines2/
 output2plot.py
 plots/
+original_sequences/
+.idea/
