--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,7 @@ original_sequences/
 RealEstate10K/
 epipole_lines_realestate/
 preicted_epipole_lines_realestate/
-epipolar_lines/
+gt_epipolar_lines/
+plots/*/*/predicted_epipole_lines/
+plots/*/*/mlp.pth/
+plots/*/*/model.pth/
