--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,4 @@ RealEstate10K/
 epipole_lines_realestate/
 preicted_epipole_lines_realestate/
 gt_epipolar_lines/
-plots/*/*/predicted_epipole_lines/
-plots/*/*/mlp.pth/
-plots/*/*/model.pth/
+plots/
