--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ RealEstate10K/
 epipole_lines_realestate/
 preicted_epipole_lines_realestate/
 gt_epipolar_lines/
-plots/
+plots\*\*\model.pth
+plots\*\*\mlp.pth
