--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ RealEstate10K/
 epipole_lines_realestate/
 preicted_epipole_lines_realestate/
 gt_epipolar_lines/
-plots\*\*\model.pth
-plots\*\*\mlp.pth
-plots\*\*\predicted_epipole_lines\
+plots/*/*/model.pth
+plots/*/*/mlp.pth
+plots/*/*/predicted_epipole_lines/
