--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ preicted_epipole_lines_realestate/
 gt_epipolar_lines/
 plots/*/*/model.pth
 plots/*/*/mlp.pth
-plots/*/*/predicted_epipole_lines/
+# plots/*/*/predicted_epipole_lines/
