--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ original_sequences/
 RealEstate10K/
 sequences/
 gt_epipolar_lines/
+epipole_lines/
 plots/*/*/model.pth
 plots/*/*/mlp.pth
 gt_epipole_lines_KITTI_cam1/
