--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ sequences/
 gt_epipolar_lines/
 epipole_lines/
 plots/*/*/model.pth
-plots/*/*/mlp.pth
+plots/*/*/*/model.pth
 gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
 gt_epipole_lines_KITTI_stereo/
