--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ gt_epipolar_lines/
 epipole_lines/
 plots/*/*/model.pth
 plots/*/*/*/model.pth
+plots/*/*/mlp.pth
 gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
 gt_epipole_lines_KITTI_stereo/
