--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ epipole_lines/
 plots/*/*/model.pth
 plots/*/*/*/model.pth
 plots/*/*/*/*/model.pth
+*model.pth
 plots/*/*/mlp.pth
 gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
