--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,7 @@ RealEstate10K/
 sequences/
 gt_epipolar_lines/
 epipole_lines/
-plots/*/*/model.pth
-plots/*/*/*/model.pth
-plots/*/*/*/*/model.pth
-*model.pth
+**model.pth
 plots/*/*/mlp.pth
 gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
