--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ sequences/
 gt_epipolar_lines/
 epipole_lines/
 **/model.pth
+**/backup_model.pth
 plots/*/*/mlp.pth
 gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
