--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ gt_epipole_lines_KITTI_cam1/
 gt_epipole_lines_KITTI_cam0/
 gt_epipole_lines_KITTI_stereo/
 DeepFNoCors/
+a.py
+SceneFlow/FlyingThings_cleanpass_webp
+SceneFlow
