--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,6 @@ epipole_lines/
 **/model.pth
 **/backup_model.pth
 plots/*/*/mlp.pth
-gt_epipole_lines_KITTI_cam1/
-gt_epipole_lines_KITTI_cam0/
-gt_epipole_lines_KITTI_stereo/
 DeepFNoCors/
 a.py
-SceneFlow/FlyingThings_cleanpass_webp
+SceneFlow
