--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@ DeepFNoCors/
 a.py
 results/
 SceneFlow/Flying_cleanpass/TRAIN/A/
-orig_0.05_tail_frozen_4_146_model.pth
 Histograms_trimmed/
+
+## computer=0 finished the training here so i put aside the 146 model which reached to 8000 epochs (outa 14000)
+orig_0.05_tail_frozen_4_146_model.pth 
